--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
+    <meta name="google-site-verification" content="qR_Qoh9HpLC5ksSyYKTpmPxXCZGBhNFZ2HvJ0ALjZTk" />
     {% include head.html %}
     {% include head/custom.html %}
   </head>
